[metadata]
name = meerk40t-pnputil
version = 0.0.1
description = MeerK40t Driver Switching
long_description_content_type=text/markdown
long_description = file: README.md
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
keywords = meerk40t, laser, driver
author = tiger12506
author_email = tiger12506
url = https://github.com/meerk40t/pnputil
license = MIT

[options]
zip_safe = True
include_package_data = True
packages = find:
package_dir =
    = .
test_suite =  test

[pep8]
max-line-length=100

[bdist_wheel]
universal=1

[options.entry_points]
meerk40t.extension = Example = pnp.main:plugin
